2013-12-16  Vladimir Serbinenko  <phcoder@gmail.com>

	Remove practice of assigning random const pointers to device id.

	This is not required as cache code already checks driver id as well.

2013-12-16  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/x86_64/types.h: Define sizeof (long) as 4 when compiling
	with mingw.

2013-12-16  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/efi/api.h: Don't use call wrappers when compiled with
	mingw or cygwin as API already matches.

2013-12-16  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/posix_wrap/errno.h: Undefine errno before redefining.

2013-12-16  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/efi/api.h: Define (u)intn_t based on pointer size and
	not on long.

2013-12-16  Vladimir Serbinenko  <phcoder@gmail.com>

	Handle X86_64_PC64 relocation.

	Those are generated by some cygwin compilers.

2013-12-16  Vladimir Serbinenko  <phcoder@gmail.com>

	Determine the need for mingw-related stubs at compile time rather than
	using not very significant $target_os.

2013-12-16  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/genmod.sh.in: Strip before converting to ELF as strip
	may not work with ELF.

2013-12-16  Vladimir Serbinenko  <phcoder@gmail.com>

	Use unix functions for temporary files and special files on cygwin.

2013-12-16  Vladimir Serbinenko  <phcoder@gmail.com>

	Define functions explicitly rather than using --defsym in tests
	whenever possible. Respect locality in remaining cases.

2013-12-16  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/genmoddep.awk: Remove explicit getline < /dev/stdin.

2013-12-15  Andrey Borzenkov <arvidjaar@gmail.com>

	* grub-core/osdep/windows/platform.c (grub_install_register_efi): Handle
	unlikely errors when getting EFI variables and make exhaustive search
	for all BootNNNN variables to find matching one.

2013-12-15  Ian Campbell  <ijc@hellion.org.uk>

	* grub-core/kern/uboot/init.c: Fix units of uboot timer.
